# crowdsourcing_visual_positioning_system

./: .gitignore  README.md  build_all.sh  pre_install.sh
ios/MapLoc/: .gitignore
ios/MapLoc/GlobalMap.xcodeproj/: project.pbxproj
ios/MapLoc/GlobalMap.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/MapLoc/MapLoc/: AppDelegate.h  AppDelegate.m  DetailViewController.h  DetailViewController.mm  Info.plist  RecordViewController.h  RecordViewController.mm  UIListDelegate.h  UIListDelegate.mm  ViewController.h  ViewController.mm  common_header.h  delegate_header.h  main.m  try_mm.mm
ios/MapLoc/MapLoc.xcodeproj/: project.pbxproj
ios/MapLoc/MapLoc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/MapLoc/MapLoc/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
run_script/: build_iphone_out.sh  get_mapids.py  run_all_build_map.sh  run_backend.sh  run_bag_tool.sh  run_conv_map.sh  run_global_match_test.sh  run_globalmap_api.sh  run_merge_new.sh  run_vslam.sh  temp_script.sh  test_bash.sh
src/backend/: CMakeLists.txt  package.xml
src/backend/include/backend/: header.h
src/backend/src/: ba.cc  ba_imu.cc  cal_subgroup.cc  culling_frame.cc  find_correspond.cc  main.cc  map_tool.cc  pose_graph_opti.cc
src/bag_tool/: CMakeLists.txt  package.xml
src/bag_tool/include/bag_tool/: extract_bag.h
src/bag_tool/src/: extract_bag.cpp  extract_bag_exe.cpp
src/build_all/: CMakeLists.txt  package.xml
src/chamo_common/: CMakeLists.txt  package.xml
src/chamo_common/include/chamo_common/: common.h
src/chamo_common/src/: common.cc
src/convert_to_visual_map/: CMakeLists.txt  package.xml
src/convert_to_visual_map/include/convert_to_visual_map/: convert_to_visual_map.h
src/convert_to_visual_map/src/: convert_to_visual_map.cc  main.cc
src/dbow2/: CMakeLists.txt  package.xml
src/dbow2/DBoW2/: FFREAK.cpp  FORB.cpp
src/dbow2/include/: FFREAK.h  FORB.h  TemplatedVocabulary.h
src/descriptor-projection/: CMakeLists.txt  package.xml
src/descriptor-projection/include/descriptor-projection/: build-projection-matrix.h
src/descriptor-projection/src/: build-projection-matrix.cc
src/display_map/: CMakeLists.txt  package.xml
src/display_map/src/: main.cc
src/g2o_catkin/: CMakeLists.txt  package.xml
src/g2o_catkin/include/g2o/: config.h
src/g2o_catkin/include/g2o/core/: base_binary_edge.hpp  sparse_block_matrix_ccs.h
src/g2o_catkin/include/g2o/types/: sim3.h  types_seven_dof_expmap.h  types_six_dof_expmap.h
src/g2o_catkin/src/types/: types_seven_dof_expmap.cpp  types_six_dof_expmap.cpp
src/global_map/: CMakeLists.txt  package.xml
src/global_map/include/global_map/: frame.h  global_map.h  global_map_common.h  global_map_seri.h  map_point.h
src/global_map/src/: frame.cc  global_map.cc  global_map_seri.cc  main.cc  map_point.cc
src/global_map_api/: CMakeLists.txt  package.xml
src/global_map_api/include/global_map_api/: global_map_api.h
src/global_map_api/src/: global_map_api.cc  main.cc
src/global_match/: CMakeLists.txt  package.xml
src/global_match/include/global_match/: global_match.h
src/global_match/src/: global_match.cc
src/global_match_test/: CMakeLists.txt  package.xml
src/global_match_test/src/: main.cc  test_positioning.cc
src/gps_tool/: CMakeLists.txt  package.xml
src/gps_tool/include/: CoorConv.h
src/gps_tool/src/: CoorConv.cpp
src/imu_visual_lib/: CMakeLists.txt  package.xml
src/imu_visual_lib/include/: IMUConverter.h  IMUPreintegrator.h  NavState.h  configparam.h  g2otypes.h  imu_tools.h  imudata.h
src/imu_visual_lib/src/: IMUConverter.cc  IMUPreintegrator.cpp  NavState.cpp  configparam.cpp  g2otypes.cpp  imu_tools.cpp  imudata.cpp
src/inverted-multi-index/: CMakeLists.txt  package.xml
src/inverted-multi-index/include/inverted-multi-index/: inverted-multi-index-common.h  inverted-multi-index.h
src/inverted-multi-index/src/: inverted-multi-index.cc
src/merge_new/: CMakeLists.txt  package.xml
src/merge_new/include/merge_new/: merge_new.h
src/merge_new/src/: main.cc  merge_new.cc
src/orb_loc/: orb_loc.cc
src/scene_recon/: CMakeLists.txt  package.xml
src/scene_recon/src/: main.cc
src/separate_map/: CMakeLists.txt  package.xml
src/separate_map/include/: separate_map.h
src/separate_map/src/: separate_map.cc  separate_map_S2.cc
src/sfm/: CMakeLists.txt  package.xml
src/sfm/align_gps/: align_gps.cc
src/sfm/app/: main.cc
src/sfm/base/: graph_cut.cc  image_reader.cc  line.cc
src/sfm/controllers/: automatic_reconstruction.cc
src/sfm/feature/: extraction.cc  matching.cc  sift.cc
src/sfm/include/base/: image_reader.h
src/sfm/include/controllers/: automatic_reconstruction.h
src/sfm/include/feature/: extraction.h  matching.h
src/sfm/include/optim/: bundle_adjustment.h
src/sfm/include/util/: option_manager.h  version.h
src/sfm/util/: option_manager.cc
src/sim3_ransac/: CMakeLists.txt  package.xml
src/sim3_ransac/include/sim3_ransac/: sim3_match.h
src/sim3_ransac/src/: sim3_match.cc
src/tool/convert_rtk_to_xyz/: CMakeLists.txt  package.xml
src/tool/convert_rtk_to_xyz/src/: main.cpp
src/tool/display_traj/: CMakeLists.txt  package.xml
src/tool/display_traj/src/: main.cc
src/tool/show_pc/: CMakeLists.txt  package.xml
src/tool/show_pc/src/: main.cc
src/try/try_global_map/: CMakeLists.txt  package.xml
src/visualization/: CMakeLists.txt  package.xml
src/visualization/include/visualization/: common-rviz-visualization.h  viz-primitives.h
src/visualization/src/: common-rviz-visualization.cc  rviz-visualization-sink.cc
src/vslam/: CMakeLists.txt  package.xml
src/vslam/Examples/Monocular/: create_vol.cc  mono_kitti.cc
src/vslam/include/: Converter.h  Frame.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  Optimizer.h  PnPsolver.h  System.h  Tracking.h
src/vslam/src/: Converter.cc  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc
(+7 files in other folders)
