<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>backend</name>
  <version>0.0.0</version>
  <description>A plugin to show how to add new console plugins</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>dddd
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>g2o_catkin</depend>
  <depend>global_map</depend>
  <depend>global_match</depend>
  <depend>sim3_ransac</depend>
  <depend>imu_visual_lib</depend>
</package>
