<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>g2o_catkin</name>
  <version>0.0.0</version>
  <description>aslam_cv_cameras</description>
  <maintainer email="schneith@ethz.ch">schneith</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>eigen_catkin</depend>
</package>
