<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_map</name>
  <version>0.0.0</version>
  <description>chamo</description>
  <maintainer email="your-email@domain.tld">chamo</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gps_tool</depend>
  <depend>chamo_common</depend>
  <depend>visualization</depend>
</package>
