<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_map_api</name>
  <version>0.0.0</version>
  <description>A plugin to show how to add new console plugins</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>backend</depend>
  <depend>merge_new</depend>
  <depend>bag_tool</depend>
  <depend>convert_to_visual_map</depend>
  <depend>vslam</depend>
</package>
