<?xml version="1.0"?>
<package format="2">
  <name>gps_tool</name>
  <version>0.0.0</version>
  <description>

	chamo

  </description>
  <url></url>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
</package>
