<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>separate_map</name>
  <version>0.0.0</version>
  <description>Eric zhang</description>
  <maintainer email="your-email@domain.tld">chamo</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>s2geometry</depend>
</package>
