<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>sfm</name>
  <version>0.0.0</version>
  <description>A plugin to show how to add new console plugins</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>chamo_common</depend>
  <depend>ceres_catkin</depend>
  <depend>sql_catkin</depend>
  <depend>SiftGPU_catkin</depend>
  <depend>PBA_catkin</depend>
  <depend>Graclus_catkin</depend>
  <depend>LSD_catkin</depend>
  <depend>VLFeat_catkin</depend>
  <depend>PoissonRecon_catkin</depend>
  <depend>FLANN_catkin</depend>
  <depend>visualization</depend>
  <depend>boost_ros_pkg</depend>
</package>
