<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>vslam</name>
  <version>0.0.0</version>
  <description>A plugin to show how to add new console plugins</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>g2o_catkin</depend>
  <depend>dbow2</depend>
  <depend>opencv3_catkin</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>global_map</depend>
  <depend>chamo_common</depend>
  
</package>
